# genesis

./: .gitignore  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pre-genesis-transactions-checks.yml  seeds-check.yml
genesis/: README.md  balances.toml  parameters.toml  transactions.toml
scripts/: merge-pr.py  rebuild.py  validate-merge.py  validate-pr.py
scripts/artifacts/: README.jinja
transactions/: CroutonDigital-bond.toml  CroutonDigital-validator.toml  McDaan-bond.toml  McDaan-validator.toml  NktSH-bond.toml  NktSH-validator.toml  RuslanGlaznyov-bond.toml  RuslanGlaznyov-validator.toml  TuanTQ15-bond.toml  TuanTQ15-validator.toml  fraccaman-account.toml  fraccaman-bond.toml  fraccaman-validator.toml  iskay-bond.toml  iskay-validator.toml  mrspir-bond.toml  mrspir-validator.toml  nick-u410-bond.toml  nick-u410-validator.toml  opsecx-bond.toml  opsecx-validator.toml  sirouk-bond.toml  sirouk-validator.toml  test-account.toml  test-validator.toml  validatorvn-bond.toml  validatorvn-validator.toml
